--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <span class="material-symbols-outlined" id="close">close</span>
             <div id="heading-history">
                 <div id="heading">
-                    <img src="./img/chat gpt/logo.png" class="logo">
+                    <img src="logo.png" class="logo">
                     <span class="new-chat">New Chat</span>
                 </div>
                 <div>
@@ -35,20 +35,20 @@
                 </div> -->
             </div>
             <div class="upgrade-area">
-                <img src="./img/chat gpt/upgradeplus.png" class="logo">
+                <img src="upgradeplus.png" class="logo">
                 <div>
                     <p class="upgarde-plan">Upgrade Plan<br><p class="upgrade-offer">Get GPT-4, DALL.E and more.</p></p>
                 </div>                
             </div>
             <div id="login-id">
-                <img src="./img/chat gpt/profile_pic_2.jpg" class="logo" id="profile-pic">
+                <img src="profile_pic_2.jpg" class="logo" id="profile-pic">
                 <p id="user-name"></p>
             </div>
         </div>
         <div class="main-area">
             <div id="main">
                 <div id="logo-area">
-                    <img src="./img/chat gpt/logo.png" id="logo">                
+                    <img src="logo.png" id="logo">                
                 </div>
                 <div id="main-para">
                     <p>How Can I help you today? </p>
